[package]
name = "htils"
description = "utilities pack for pentest"
license = "GPL-3.0-only"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/Arikato111/htil"
readme = "README.md"

categories = []
include = ["src/*"]


[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.48"
